Fix WNP88 Firefox wordmark in dark mode [fix #10150]

--- a/media/css/firefox/whatsnew/whatsnew-88-en.scss
+++ b/media/css/firefox/whatsnew/whatsnew-88-en.scss
@@ -10,6 +10,13 @@ $image-path: '/media/protocol/img';
 @import 'includes/header';
 
 
+// Override _header.scss since this page doesn't support dark mode
+@media (prefers-color-scheme: dark) {
+    .c-page-header-logo-fx {
+        background-image: url($image-path + '/logos/firefox/browser/logo-word-hor-sm.png');
+    }
+}
+
 //* -------------------------------------------------------------------------- */
 // Main content
 .wnp-content-main {
